--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+# reports &checkpoints
+
+*.csv
+*.index
+
+
+#mobilenet stuff
+fat/ssd_training/
+fat/Aerial-Maritime-9
+fat/mobilenet_ssd_config
