added new dataset caltech and regression report

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,13 @@ our_datasets/GTSRB
 our_datasets/CamVid
 our_datasets/YOLO
 our_datasets/steering_wheel
+our_datasets/steering_wheel
+our_dataset/shape_count
 fat/pedestrian_ssd
 fat/results
 fat/test
+*.png
+*.jpg
 #CHECKPOINTS
 *saved_TFOD_models*
 *.tfrecord
@@ -200,3 +204,26 @@ cython_debug/
 fat/ssd_training/
 fat/Aerial-Maritime-9
 fat/mobilenet_ssd_config
+
+our_datasets/GTSRB
+our_datasets/CamVid
+our_datasets/YOLO
+our_datasets/steering_wheel
+our_dataset/shape_count
+fat/pedestrian_ssd
+fat/results
+fat/test
+*.png
+*.jpg
+#CHECKPOINTS
+*saved_TFOD_models*
+*.tfrecord
+*.pbtxt
+*.tar.gz
+ckpt-*
+events.out.tfevents.*
+*.pb
+*.config
+variables.data-*
+variables.index
+checkpoint
